- Added support for BASYS3-Board (*.xdc constrains file is written)
- CAUTION: To generalize the VHDL export I had to rename a XML entity.
           As a consequence of that the address bits settings in RAMs and ROMs
           are lost. To fix that reset the number of address bits.
- Added enable input to counter component. If you have used the counter in the past
  you have to set the en input to 1.

v0.13, released on 25. Jul 2017
- Introduced a library of sub circuits which are available in every circuit.
  So far, the library contains only the 74xx circuits.
- Added a barrel shifter (thanks to roy77)
- some improvements concerning error messages:
  - In case of oscillations almost all affected components are shown.
  - If an error occurs, the name of the affected circuit file is shown.
  - If an error occurs, the causing sub circuit is highlighted.
  - A warning message shows up if a circuit with unnamed inputs is analysed.
  - A warning message shows up if a circuit with missing pin numbers is exported to a
    hardware-related file.
- An input can have "high z" value as its default value.
  CAUTION: All inputs have lost their default values! If you have build a circuit that
           contains test cases that depend on a non-null default value, this tests
           will fail. To resolve this issue, reset the default value.
- Added an enable input to the T flip-flop
  CAUTION: By default this input is activated now. In circuits which used the T flip-flop
           in the past, the new input needs to be disabled.
- Unidirectional FETs are added to overcome certain CMOS issues.
- Added zooming to measurement graphs.
- Test results can be displayed as measurement graphs.
- The Text component is able to show multiple lines.
- Comments are allowed in hex files.
- Some minor bug fixes

v0.12.1, released on 05. Jun 2017
- added a fuse to simulate a PROM or PAL.
- added some more CMOS examples
- Improved flexibility of the splitter.
